--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,11 +37,11 @@ all = [
     "darkdetect==0.8.0; platform_system != 'Darwin'",
     "darkdetect[macos-listener]==0.8.0; platform_system == 'Darwin'",
     "pywinstyles==1.8; platform_system == 'Windows'",
-    "hPyT==1.3.2; platform_system == 'Windows'",
+    "hPyT==1.3.4; platform_system == 'Windows'",
     "win32material==1.0.6; platform_system == 'Windows'",
     "pillow>=10.0.0",
 ]
-extension = ["tkintertools-mpl", "tkintertools-3d"]
+extension = ["tkintertools-mpl", "tkintertools-3d", "tkintertools-media"]
 
 [project.urls]
 "Bug tracker" = "https://github.com/Xiaokang2022/tkintertools/issues"
