--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -290,6 +290,7 @@ nav:
       - 安全策略: SECURITY.md
       - 行为准则: CODE_OF_CONDUCT.md
       - 赞助我们: Sponsor.md
+      - 更多交流: Contact.md
 
   - 教程和文档:
       - t&d/index.md
@@ -306,6 +307,7 @@ nav:
 
   - 官方视频:
       - videos/index.md
+      - tkt 再度更新：新增播放视频的扩展包！: videos/pages/5.md
       - 干掉 tkinter！tkintertools 大更新啦！: videos/pages/4.md
       - tkintertools 又更新啦！: videos/pages/3.md
       - 碾压 tkinter 的 UI 框架：tkintertools 3.0.0 正式进入 beta 公测阶段: videos/pages/2.md
