--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,14 +1,20 @@
-name: Pylint
+# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+
+name: Python package
 
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
+
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.10", "3.11", "3.12", "3.13"]
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
@@ -18,10 +24,12 @@ jobs:
     - name: Install dependencies
       run: |
         pip3 install --upgrade pip
-        pip3 install --upgrade setuptools
-        pip3 install --upgrade wheel
         pip3 install pylint
+        pip3 install pytest
         pip3 install .
-    - name: Analysing the code with pylint
+    - name: Lint with pylint
       run: |
-        pylint $(git ls-files '*.py') --output-format=colorized --fail-on=E,F --fail-under=9 --max-line-length=80
+        pylint $(git ls-files '*.py') --output-format=colorized --fail-on=E,F --fail-under=9 --max-line-length=79
+    - name: Test with pytest
+      run: |
+        pytest
