--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -16,7 +16,11 @@ jobs:
         uses: actions/setup-python@v5
 
       - name: Install dependencies
-        run: pip install pytest pytest-cov
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+          pip install pytest-cov
+          pip install .
 
       - name: Run tests
         run: pytest --cov --cov-report=xml
