--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,6 +31,6 @@ jobs:
         pip3 install pytest
         pip3 install .
     - name: Lint with pylint
-      run: pylint .
+      run: pylint $(git ls-files "*.py")
     - name: Test with pytest
-      run: pytest .
+      run: pytest
