chore: update .github

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,7 +20,7 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
-    environment: release-package
+    environment: release
 
     steps:
     - uses: actions/checkout@v4
