fix: lang en crash

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -274,9 +274,8 @@ extra_css:
 
 plugins:
   - search
+  - tags
   - statistics
-  - tags:
-      tags_file: blog/tags.md
   - blog:
       blog_toc: true
       post_excerpt: required
