--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -7,6 +7,12 @@ authors:
     avatar: https://github.com/Xiaokang2022.png # Author avatar
     url: https://github.com/Xiaokang2022 # Author website URL
 
+  _Xiaokang2022:
+    name: Xiaokang2022🤖
+    description: 我不是机器人，我是工具人，美化格式而生
+    avatar: https://github.com/Xiaokang2022.png
+    url: https://github.com/Xiaokang2022
+
   I-love-study:
     name: I-love-study
     description: 请大声喊出我的名字吧~
