--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -291,13 +291,13 @@ plugins:
   - glightbox:
       background: none
       auto_themed: true
-  # - git-revision-date-localized:
-  #     enable_creation_date: true
-  #     type: timeago
-  # - git-committers:
-  #     repository: Xiaokang2022/tkintertools
-  #     branch: docs
-  #     token: !ENV GH_TOKEN # 需要自行在终端中设置临时环境变量，强烈不建议显式地在此处设置 token
+  - git-revision-date-localized:
+      enable_creation_date: true
+      type: timeago
+  - git-committers:
+      repository: Xiaokang2022/tkintertools
+      branch: docs
+      token: !ENV GH_TOKEN # 需要自行在终端中设置临时环境变量，强烈不建议显式地在此处设置 token
   - minify:
       minify_html: true
       htmlmin_opts:
