--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,9 +23,9 @@ jobs:
     environment: release
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@main
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@main
       with:
         python-version: '3.x'
     - name: Install dependencies
