--- a/docs/en/mkdocs.yml
+++ b/docs/en/mkdocs.yml
@@ -3,7 +3,7 @@ INHERIT: ../../mkdocs.yml
 site_url: https://Xiaokang2022.github.io/tkintertools/en/ # 站点链接
 edit_uri: edit/main/docs/en/docs # 编辑地址
 site_description: Official website of tkintertools # 站点描述
-copyright: <a href="#__consent">Change Cookie Settings</a><br/>Copyright &copy; 2022 Xiaokang2022 # 版权信息和 Cookie 设置
+copyright: <a href="#__consent">Change Cookie Settings</a><br/>Copyright &copy; 2022-2024 Xiaokang2022 # 版权信息和 Cookie 设置
 docs_dir: docs # 文档目录（默认值）
 site_dir: ../../site/en/ # 网站目录（默认值）
 
