--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,12 +6,12 @@ edit_uri: edit/main/docs # 编辑地址
 edit_uri_template: null # 编辑地址模板（默认值）
 site_description: tkintertools 的官方网站 # 站点描述
 site_author: Xiaokang2022 # 站点作者
-copyright: <a href="#__consent">修改 Cookie 设置</a><br/>Copyright &copy; 2022 Xiaokang2022 # 版权信息和 Cookie 设置
+copyright: <a href="#__consent">修改 Cookie 设置</a><br/>Copyright &copy; 2022-2024 Xiaokang2022 # 版权信息和 Cookie 设置
 remote_branch: gh-pages # GitHub Pages 远程分支名称（默认值）
 remote_name: origin # 远程名称（默认值）
 docs_dir: docs # 文档目录（默认值）
 site_dir: site # 网站目录（默认值）
-dev_addr: 127.0.0.1:8000 # 预览模式地址（默认值）
+dev_addr: 127.0.0.1:8080 # 预览模式地址（默认值）
 use_directory_urls: true # URL 使用目录名还是文件名（默认值）
 strict: false # 警告级别（默认值），出现警告就终止程序
 
@@ -252,10 +252,10 @@ extra: # 额外设定
           note: 感谢您的反馈！
 
 extra_javascript:
-  - https://Xiaokang2022.github.io/js/click-colorful.js # 鼠标点击效果
-  - https://Xiaokang2022.github.io/js/shortcuts.js # 绑定左右键换页的键盘快捷键
-  - https://Xiaokang2022.github.io/js/mathjax.js # 数学表达式
-  - https://Xiaokang2022.github.io/js/tablesort.js # 表格排序功能
+  - js/click-colorful.js # 鼠标点击效果
+  - js/shortcuts.js # 绑定左右键换页的键盘快捷键
+  - js/mathjax.js # 数学表达式
+  - js/tablesort.js # 表格排序功能
   - https://unpkg.com/mathjax@latest/es5/tex-mml-chtml.js # 数学表达式运行环境
   - https://unpkg.com/tablesort@latest/dist/tablesort.min.js # 表格排序功能运行环境（默认文本类型）
   - https://unpkg.com/tablesort@latest/dist/sorts/tablesort.date.min.js # 表格排序功能（日期类型）
@@ -265,8 +265,7 @@ extra_javascript:
   - https://unpkg.com/tablesort@latest/dist/sorts/tablesort.number.min.js # 表格排序功能（数字类型）
 
 extra_css:
-  - overrides/custom.css
-  - https://Xiaokang2022.github.io/css/extra.css # 加载自定义的样式
+  - css/extra.css # 加载自定义的样式
   - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css # 图标字体库
   - https://cdnjs.cloudflare.com/ajax/libs/lxgw-wenkai-screen-webfont/1.5.0/style.min.css # 设置字体（霞鹜文楷）【版本不能再更高了，会导致公式字体变小】
 
@@ -298,6 +297,8 @@ plugins:
       repository: Xiaokang2022/tkintertools
       branch: main
       token: !ENV GH_TOKEN # 需要自行在终端中设置临时环境变量，强烈不建议显式地在此处设置 token
+      exclude_committers:
+        - web-flow
   - minify:
       minify_html: true
       htmlmin_opts:
