chore: Update some files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,7 @@ dynamic = ["version"]
 dependencies = ["typing_extensions"]
 
 [project.optional-dependencies]
-recommended = [
-    "darkdetect==0.8.0; platform_system != 'Darwin'",
-    "darkdetect[macos-listener]==0.8.0; platform_system == 'Darwin'",
-    "pywinstyles==1.8; platform_system == 'Windows'",
-    "pillow>=10.0.0",
-]
-all = [
+opt = [
     "darkdetect==0.8.0; platform_system != 'Darwin'",
     "darkdetect[macos-listener]==0.8.0; platform_system == 'Darwin'",
     "pywinstyles==1.8; platform_system == 'Windows'",
@@ -38,7 +32,18 @@ all = [
     "win32material==1.0.6; platform_system == 'Windows'",
     "pillow>=10.0.0",
 ]
-extension = ["tkintertools-mpl", "tkintertools-3d", "tkintertools-media"]
+ext = ["tkintertools-mpl", "tkintertools-3d", "tkintertools-media"]
+all = [
+    "darkdetect==0.8.0; platform_system != 'Darwin'",
+    "darkdetect[macos-listener]==0.8.0; platform_system == 'Darwin'",
+    "pywinstyles==1.8; platform_system == 'Windows'",
+    "hPyT==1.3.6; platform_system == 'Windows'",
+    "win32material==1.0.6; platform_system == 'Windows'",
+    "pillow>=10.0.0",
+    "tkintertools-mpl",
+    "tkintertools-3d",
+    "tkintertools-media",
+]
 
 [project.urls]
 "Bug tracker" = "https://github.com/Xiaokang2022/tkintertools/issues"
