--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
         pip3 install --upgrade pip
         pip3 install pylint
         pip3 install pytest
-        pip3 install .
+        pip3 install .[opt]
     - name: Lint with pylint
       run: pylint $(git ls-files "*.py")
     - name: Test with pytest
