--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,6 +30,14 @@ jobs:
         pip3 install pylint
         pip3 install pytest
         pip3 install .[opt]
+
+        if [ "$RUNNER_OS" == "Linux" ]; then
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+          Xvfb :99 -screen 0 1280x1024x24 &
+          echo "DISPLAY=:99" >> $GITHUB_ENV
+        fi
+
     - name: Lint with pylint
       run: pylint $(git ls-files "*.py")
     - name: Test with pytest
