--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,6 +36,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y xvfb
+        Xvfb :99 -screen 0 1280x1024x24 &
+        echo "DISPLAY=:99" >> $GITHUB_ENV
 
     - name: Lint with pylint
       run: pylint $(git ls-files "*.py")
