--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,18 @@ description = "A lightweight UI framework based on tkinter with all UI drawn in 
 readme = "README.md"
 license = { text = "MIT License" }
 requires-python = ">=3.10"
-keywords = ["tkinter", "tkintertools", "gui", "ui", "cross-platform", "themed"]
+keywords = [
+    "tkinter",
+    "gui",
+    "ui",
+    "cross-platform",
+    "themed",
+    "typed",
+    "lightweight",
+    "ui-design",
+    "modern-ui",
+    "custom",
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -21,7 +32,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 dynamic = ["version"]
-dependencies = ["typing_extensions"]
+dependencies = ["typing-extensions"]
 
 [project.optional-dependencies]
 opt = [
@@ -32,17 +43,10 @@ opt = [
     "win32material==1.0.7;              platform_system == 'Windows'",
     "pillow>=10.0.0",
 ]
-ext = ["tkintertools-mpl", "tkintertools-3d", "tkintertools-media"]
-all = [
-    "darkdetect==0.8.0",
-    "darkdetect[macos-listener]==0.8.0; platform_system == 'Darwin'",
-    "pywinstyles==1.8;                  platform_system == 'Windows'",
-    "hPyT==1.3.7;                       platform_system == 'Windows'",
-    "win32material==1.0.7;              platform_system == 'Windows'",
-    "pillow>=10.0.0",
-    "tkintertools-mpl",
-    "tkintertools-3d",
-    "tkintertools-media",
+ext = [
+    "tkintertools-mpl>=1.2.3",
+    "tkintertools-media>=1.1.3",
+    "tkintertools-3d>=1.0.3",
 ]
 
 [project.urls]
