--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tkintertools"
+name = "maliang"
 authors = [{ name = "Xiaokang2022", email = "2951256653@qq.com" }]
 maintainers = [{ name = "Xiaokang2022", email = "2951256653@qq.com" }]
 description = "A lightweight UI framework based on tkinter with all UI drawn in Canvas."
@@ -44,24 +44,24 @@ opt = [
     "pillow>=10.0.0",
 ]
 ext = [
-    "tkintertools-mpl>=1.2.3",
-    "tkintertools-media>=1.1.3",
-    "tkintertools-3d>=1.0.3",
+    "maliang-mpl>=1.2.3",
+    "maliang-media>=1.1.3",
+    "maliang-3d>=1.0.3",
 ]
 
 [project.urls]
-"Bug tracker" = "https://github.com/Xiaokang2022/tkintertools/issues"
-"Changelog" = "https://xiaokang2022.github.io/tkintertools/CHANGELOG/"
-"Documentation" = "https://xiaokang2022.github.io/tkintertools-docs/"
-"Donate" = "https://xiaokang2022.github.io/tkintertools/Sponsor/"
-"Homepage" = "https://xiaokang2022.github.io/tkintertools/"
-"Source code" = "https://github.com/Xiaokang2022/tkintertools"
+"Bug tracker" = "https://github.com/Xiaokang2022/maliang/issues"
+"Changelog" = "https://xiaokang2022.github.io/maliang/CHANGELOG/"
+"Documentation" = "https://xiaokang2022.github.io/maliang-docs/"
+"Donate" = "https://xiaokang2022.github.io/maliang/Sponsor/"
+"Homepage" = "https://xiaokang2022.github.io/maliang/"
+"Source code" = "https://github.com/Xiaokang2022/maliang"
 
 [tool.setuptools.dynamic]
-version = { attr = "tkintertools.__version__" }
+version = { attr = "maliang.__version__" }
 
 [tool.setuptools.packages.find]
-include = ["tkintertools*"]
+include = ["maliang*"]
 
 [tool.pylint]
 output-format = "colorized"
