--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,6 +2,10 @@ name: Coverage analytics
 
 on: [push, pull_request, workflow_dispatch]
 
+permissions:
+  contents: read
+  pull_requests: write
+
 jobs:
   analyze:
 
