--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -11,18 +11,14 @@ body:
 
         Please read our [Contribution Guideline](https://xiaokang2022.github.io/maliang/en/CONTRIBUTING/) before completing this report.
         请在填写此报告前先阅读我们的[贡献指南](https://xiaokang2022.github.io/maliang/CONTRIBUTING/)。
-  - type: dropdown
+  - type: input
     id: version
     attributes:
       label: Version
       description: |
         Which version of the project are you using?  
         您使用的是本项目的哪个版本？
-      options:
-        - Latest stable version (Default)
-        - Latest development version
-        - Other version (Please add later)
-      default: 0
+      placeholder: e.g. 3.0.0
     validations:
       required: true
   - type: dropdown
@@ -36,9 +32,10 @@ body:
       options:
         - Windows 11
         - Windows 10
-        - Linux
+        - Linux (GNOME)
+        - Linux (KDE Plasma)
         - macOS
-        - Other (Please add later)
+        - Other
     validations:
       required: true
   - type: textarea
@@ -75,7 +72,7 @@ body:
       description: |
         How can we get in touch with you if we need more info?  
         如果需要更多信息，我们如何与您取得联系？
-      placeholder: ex. email@example.com
+      placeholder: e.g. email@example.com
     validations:
       required: false
   - type: checkboxes
