--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
-  - name: Questions & Answers
-    url: https://github.com/Xiaokang2022/maliang/discussions/categories/q-a
+  - name: 🙏 Questions & Answers
+    url: https://github.com/Xiaokang2022/maliang/discussions/new?category=q-a
     about: Please ask and answer questions here.
