--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -172,7 +172,7 @@ theme: # 此项各个设定因主题而异
     - media: "(prefers-color-scheme: light)" # 亮色主题
       scheme: default
       primary: white
-      accent: orange
+      accent: green
       toggle:
         icon: material/weather-sunny
         name: 明亮主题
@@ -319,6 +319,7 @@ nav:
 
   - 教程和文档:
       - t&d/index.md
+      - 第三方扩展包: t&d/third-party.md
 
   - 示例项目:
       - projects/index.md
@@ -335,8 +336,9 @@ nav:
 
   - 官方视频:
       - videos/index.md
+      - 这……这还是 tkinter 吗？给我干哪儿来了这是？？？: videos/pages/6.md
       - tkt 再度更新：新增播放视频的扩展包！: videos/pages/5.md
-      - 干掉 tkinter！maliang 大更新啦！: videos/pages/4.md
-      - maliang 又更新啦！: videos/pages/3.md
-      - 碾压 tkinter 的 UI 框架：maliang 3.0.0 正式进入 beta 公测阶段: videos/pages/2.md
+      - 干掉 tkinter！tkintertools 大更新啦！: videos/pages/4.md
+      - tkintertools 又更新啦！: videos/pages/3.md
+      - 碾压 tkinter 的 UI 框架：tkintertools 3.0.0 正式进入 beta 公测阶段: videos/pages/2.md
       - 这还是你记忆中的 tkinter 的程序吗？？？: videos/pages/1.md
